fix: 修复测试类字段名称与实体类不匹配的问题
- CartServiceTest: 使用正确的Product和CartItem字段名
- ProductServiceTest: 使用正确的Product字段名
- CategoryServiceTest: 使用正确的Category字段名
- DiyServiceTest: 使用正确的DiyProject和DiyConfig字段名
- OrderServiceTest: 使用正确的Order和OrderItem字段名